bug#3: fixed invoicing method vertical align

--- a/css/syle.css
+++ b/css/syle.css
@@ -218,7 +218,7 @@ main {
     border-radius: 50%;
     display: inline-block;
     background-color: white;
-    vertical-align: middle;
+    vertical-align: sub;
 }
 
 .checked {
